# dfs

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  changelog.md  index.html  makefile  mkdocs.yml  objects.inv  property_benchmarks_v2.json  pyproject.toml  sitemap.xml
.config/mkdocs/: mkdocs.yml  requirements.txt
.github/: dependabot.yml
.github/workflows/: buid-docs.yml  pre-release.yml  release.yml  test.yml  typer_build_docs.yaml-deactivated-for-now
benchmarks/: index.html
changelog/: index.html
cli/: index.html
dfs/: cli.py
dfs/core/: collector.py  generate.py  misc.py
dfs/core/legacy/: __init__.py
dfschema/: __init__.py  cli.py  utils.py  validate.py
dfschema/core/: __init__.py  column.py  config.py  core.py  dtype.py  exceptions.py  generate.py  logger.py  metadata.py  shape.py
dfschema/core/legacy/: __init__.py  v1.py
docs/: base.schema.html  changelog.md  cli.md  columns.schema.html  index.md  new_style.md  old_style.md  schema.html  shape.schema.html
jsonschemas/: schema.json
new_style/: index.html
notebooks/: benchmarks.ipynb  manual.ipynb
notebooks/.ipynb_checkpoints/: benchmarks-checkpoint.ipynb  manual-checkpoint.ipynb
notebooks/benchmarks/: 1_dfschema.ipynb  2_modin.ipynb
old_style/: index.html
roadmap/: index.html
scripts/: generate_jsonschema.py  generate_v2.py  jsfh-conf.yaml
tests/: conftest.py  test_categorical.py  test_cli.py  test_core.py  test_generate.py  test_invalid.py  test_numeric.py  test_read_write.py  test_str_patterns.py  test_subsets.py  test_v1.py  test_validate.py  test_version.py  utils.py
tests/test_data/: test1.csv
tests/test_schemas/v1/bad/: v1_bad1.json  v1_bad2.json
tests/test_schemas/v1/good/: PRsummarySheet.json  agent_user_closings_deals.json  agent_user_sales_deals.json  all_rentals.json  all_sales.json  closed_sales.json  experts_messages.json  experts_performance_connections.json  experts_performance_contacts.json  market_report.json  price_estimates.json  price_indices.json  property_benchmarks.json  property_comps.json  property_owners.json  property_unit_features.json  rent_estimates.json  sales_certainty_inference.json  short_tableau.json  size_schema.json  time_to_lease.json  units_schema.json  users_is_agent.json  v1_raw.json  v2_features.json  v2_strict.json
tests/test_schemas/v2/bad/: v1_bad3.json  v2_bad1.json  v2_bad2.json  v2_bad3.json
tests/test_schemas/v2/good/: v1_raw.json  v2_features.json  v2_predictions.json  v2_predictions2.json  v2_raw.json  v2_raw.yml  v2_raw2.json
tutorials/: index.html
