[tool.poetry]
name = "dfschema"
version = "0.0.12"
description = "lightweight pandas.DataFrame schema"
authors = ["Philipp <philippk@zillowgroup.com>"]
readme = "README.md"

[tool.poetry.scripts]
dfschema = "dfschema.cli:app"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = ">=1.5.3"
sqlalchemy = {version = "1.*", optional = true}
pandera = {version = "^0.6", optional = true}
pydantic = ">=2.2,<3.0"
typer = {version = "^0.6.1", optional = true}
PyYAML = {version = "^6.0", optional = true}


[tool.poetry.extras]
sqlalchemy = ["sqlalchemy"]
cli = ["typer"]
yaml = ["PyYAML"]
all = ["sqlalchemy", "typer", "PyYAML", "pandera"]


[tool.poetry.group.docs.dependencies]
mdx-include = "^1.4.1"
mkdocs-material = "^8.1.4"
mkdocs = "^1.1.2"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
hypothesis = "6.13.12"
pytest = "^7.1.3"
typer = "^0.6.1"
pre-commit = "^2.19.0"
MarkupSafe = "2.0.1"
jupyter = "^1.0.0"
watermark = "^2.3.1"
gitchangelog = "^3.0.4"
black = "^24.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
